[sc-1837]: new dark-mode mixin + refactor kb home with Pastanaga

--- a/apps/dashboard/src/app/components/stash-navbar/stash-navbar.component.scss
+++ b/apps/dashboard/src/app/components/stash-navbar/stash-navbar.component.scss
@@ -97,8 +97,7 @@ $height-breakpoint: 730px;
 }
 
 .dark {
-  background-color: $color-dark-stronger;
-  color: $color-light-stronger;
+  @include dark-mode();
 }
 
 .disabled {
