--- a/apps/dashboard/src/app/account/account-kbs/kb-add/kb-add.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/kb-add/kb-add.component.html
@@ -1,33 +1,37 @@
 <div class="kb-add">
-  <h1>{{ 'stash.create' | translate }}</h1>
-  <button class="close-button" (click)="close()">
-    <svg-icon src="assets/icons/close.svg"></svg-icon>
-  </button>
+  <header>
+    <h1>{{ 'stash.create' | translate }}</h1>
+    <pa-button class="close-button"
+               icon="cross"
+               aspect="basic"
+               (click)="close()">{{'generic.close' | translate}}</pa-button>
+  </header>
 
-  <form [formGroup]="kbForm" (ngSubmit)="save()">
-    <ng-container *ngIf="step === 0">
+  <form class="form-container"
+        [formGroup]="kbForm"
+        (ngSubmit)="save()">
+    <div *ngIf="step === 0"
+         class="modal-body">
       <div class="mb-24" fxLayout="row">
         <label for="kb-title" fxFlex="24%" class="kb-add-field-name">
           {{ 'stash.name' | translate }}
         </label>
         <div fxFlex="70%">
-          <stf-input
-            id="kb-title"
-            formControlName="title"
-            [validator]="kbForm.controls['title']"
-            [validation_messages]="validationMessages.title"
-            [isLessen]="true"
-          >
-          </stf-input>
+          <pa-input id="kb-title"
+                    formControlName="title"
+                    [errorMessages]="validationMessages.title"
+          ></pa-input>
         </div>
       </div>
 
-      <div class="mb-36" fxLayout="row">
+      <div fxLayout="row">
         <label for="kb-description" fxFlex="24%" class="kb-add-field-name">
           {{ 'generic.description' | translate }}
         </label>
         <div fxFlex="70%">
-          <stf-textarea id="account-description" formControlName="description" initialHeight="100px"> </stf-textarea>
+          <pa-textarea id="kb-description"
+                       formControlName="description"
+                       rows="4"></pa-textarea>
         </div>
       </div>
 
@@ -36,52 +40,68 @@
       <div class="kb-add-zone" *ngIf="data.zones">
         <h2>{{ 'generic.zone' | translate }}</h2>
         <div class="mb-24">{{ 'stash.create.zone_description' | translate }}</div>
-        <select stfSelect formControlName="zone" class="kb-add-zone-select">
-          <option *ngFor="let zone of data.zones" [value]="zone.id">{{ zone.title }}</option>
-        </select>
+        <pa-select formControlName="zone" class="kb-add-zone-select">
+          <pa-option *ngFor="let zone of data.zones"
+                     [value]="zone.id">{{ zone.title }}</pa-option>
+        </pa-select>
       </div>
-    </ng-container>
+    </div>
 
-    <ng-container *ngIf="step === 1">
+    <div *ngIf="step === 1"
+         class="modal-body">
       <h2>{{ 'stash.create.languages' | translate }}</h2>
       <p>{{ 'stash.create.languages-help' | translate }}</p>
-      <stf-checkbox-group [checkboxes]="languages" [(selection)]="languageMode" type="radio"> </stf-checkbox-group>
-      <select *ngIf="languageMode[0] === 'monolingual'" stfSelect formControlName="selectedLanguage">
-        <option [value]="lang" *ngFor="let lang of languageList">{{ 'language.' + lang | translate }}</option>
-      </select>
-    </ng-container>
+      <pa-radio-group name="radio-group-language"
+                      formControlName="languageMode">
+        <pa-radio *ngFor="let radio of languages"
+                  [value]="radio.value">{{radio.label | translate}}</pa-radio>
+      </pa-radio-group>
 
-    <ng-container *ngIf="step === 2 && (hasAnonymization | async)">
+      <pa-select *ngIf="kbForm.controls.languageMode.value === 'monolingual'"
+                 formControlName="selectedLanguage">
+        <pa-option *ngFor="let lang of languageList"
+                   [value]="lang">{{ 'language.' + lang | translate }}</pa-option>
+      </pa-select>
+    </div>
+
+    <div *ngIf="step === 2 && (hasAnonymization | async)"
+         class="modal-body">
       <h2>{{ 'stash.create.anonymization' | translate }}</h2>
       <p>{{ 'stash.create.anonymization-help' | translate }}</p>
-      <stf-checkbox-group [checkboxes]="anonymizationOptions" [(selection)]="useAnonymization" type="radio">
-      </stf-checkbox-group>
-    </ng-container>
+      <pa-radio-group name="radio-group-anonymization"
+                      formControlName="useAnonymization">
+        <pa-radio *ngFor="let radio of anonymizationOptions"
+                  [value]="radio.value">{{radio.label | translate}}</pa-radio>
+      </pa-radio-group>
+    </div>
 
-    <div *ngIf="error" class="error">
-      <strong>
+    <footer>
+      <div *ngIf="error" class="error body-m">
         {{ error | translate }}
-      </strong>
-    </div>
-    <div class="mt-52" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="10px">
-      <stf-button *ngIf="step === (lastStep | async)" type="submit" minWidth="110px" [disabled]="loading">
-        {{ 'generic.save' | translate }}
-      </stf-button>
-      <stf-button
-        *ngIf="step < ((lastStep | async) || 2)"
-        (click)="next()"
-        color="secondary"
-        [disabled]="step === 0 && kbForm.invalid"
-        minWidth="110px"
-      >
-        {{ 'generic.next' | translate }}
-      </stf-button>
-      <stf-button *ngIf="step > 0" (click)="back()" color="gray" minWidth="110px">
-        {{ 'generic.back' | translate }}
-      </stf-button>
-    </div>
-    <div class="steps">
-      <small>{{ step + 1 }} / {{ totalSteps | async }}</small>
-    </div>
+      </div>
+      <div class="footer-buttons">
+        <pa-button *ngIf="step > 0"
+                   aspect="basic"
+                   (click)="back()">
+          {{ 'generic.back' | translate }}
+        </pa-button>
+
+        <pa-button *ngIf="step === (lastStep | async)"
+                   type="submit"
+                   kind="primary"
+                   [disabled]="loading">
+          {{ 'generic.save' | translate }}
+        </pa-button>
+
+        <pa-button *ngIf="step < ((lastStep | async) || 2)"
+                   [disabled]="step === 0 && kbForm.invalid"
+                   (click)="next()">
+          {{ 'generic.next' | translate }}
+        </pa-button>
+      </div>
+      <div class="steps">
+        <small>{{ step + 1 }} / {{ totalSteps | async }}</small>
+      </div>
+    </footer>
   </form>
 </div>
