--- a/apps/dashboard/src/app/components/topbar/kb-switch/kb-switch.component.scss
+++ b/apps/dashboard/src/app/components/topbar/kb-switch/kb-switch.component.scss
@@ -1,48 +1,29 @@
 @import 'variables';
 
-.kb-switch {
-  background-color: #fff;
-  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.16);
+:host {
+  display: block;
 
-  &-item {
-    @include reset-button();
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 40px;
-    padding: 0 12px;
-    border-bottom: 2px solid #f1f1f3;
-    font-weight: var(--stf-font-weight-semibold);
-    color: $gray-contrast;
-    text-align: left;
-    &:not(:disabled) {
-      cursor: pointer;
+  pa-button.kb-switch ::ng-deep {
+    .pa-button {
+      width: rhythm(24);
+
+      .pa-button-wrapper {
+        flex: 1 0 auto;
+      }
     }
-    &:disabled {
-      opacity: 0.3;
-    }
-    &:last-child {
-      border-bottom-color: transparent;
-    }
-    &:hover:not(:disabled) {
-      background-color: #f3f3f3;
-    }
-    span {
-      flex: 1 1 0;
-      @include text-truncate();
-    }
-    svg-icon {
-      flex: 0 0 auto;
-    }
-    svg {
-      display: block;
-      width: 16px;
-      height: auto;
-      fill: $gray-contrast;
+    .pa-button-label {
+      align-items: center;
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+
+      pa-icon {
+        margin-left: rhythm(2);
+      }
     }
   }
 
-  .demo {
-    opacity: 0.5;
+  pa-option.demo-kb {
+    color: $color-neutral-strong;
   }
 }
